plugins {
    id 'java'
    id 'groovy'
    id 'me.champeau.jmh' version '0.7.3'
}

group = 'dev.yavuztas.javafast'
version = '1.0-SNAPSHOT'

def junitVersion = '5.10.0'
def spockVersion = '2.4-groovy-5.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += [
      '--add-modules=jdk.incubator.vector',
      '--enable-preview'
    ]
}

tasks.withType(Test).configureEach {
    jvmArgs '--add-modules=jdk.incubator.vector'
}

repositories {
    mavenCentral()
}

dependencies {
    jmh 'org.openjdk.jmh:jmh-core:1.37'
    jmh 'org.openjdk.jmh:jmh-generator-annprocess:1.37'

    testImplementation platform("org.junit:junit-bom:${junitVersion}")
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    testImplementation "org.spockframework:spock-core:${spockVersion}"
}

String jmhIncludes = findProperty("jmhIncludes")
String arraySize = findProperty("benchmark.array.size")
jmh {
    if (jmhIncludes != null) {
        includes = [jmhIncludes]
    }
    profilers = [
        'gc' //, 'async'
    ]
    jvmArgs = [
        "-Dbenchmark.array.size=$arraySize",
        "--add-modules=jdk.incubator.vector", "--enable-preview",
        "-Xms12g", "-Xmx12g", "-XX:+UseG1GC",
//        "-XX:+UnlockDiagnosticVMOptions",
//        "-XX:+PrintCompilation",
//        "-XX:+PrintInlining"
    ]
}

test {
    useJUnitPlatform()
}
